Cloud animation overflow fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -35,6 +35,7 @@ iframe {
 .clouds-container {
     position: absolute;
     width: 100%;
+    overflow: hidden;
 }
 
 .cloud {
@@ -152,7 +153,7 @@ input[type='text'] {
 }
 
 .nav {
-    z-index: 99;   
+    z-index: 99;
 }
 
 .btn {
